--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "backend for my ecommerce app",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node index.js"
   },
   "keywords": [
     "backend",
@@ -17,18 +18,16 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.11",
     "express": "^4.19.2",
-    "joi": "^17.13.1",
+    "joi": "^17.3.1",
     "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
-<<<<<<< HEAD
-    "multer": "^1.4.5-lts.1",
-=======
     "lodash": "^4.17.21",
->>>>>>> feat/signup
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
+    "pg": "^8.11.5",
     "sequelize": "^6.37.3",
-    "socketio": "^1.0.0"
+    "socket.io": "^4.3.1"
   },
   "devDependencies": {
     "debug": "^4.3.4",
