--- a/dbackend/Pipfile
+++ b/dbackend/Pipfile
@@ -4,6 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django = "*"
+djangorestframework = "*"
+djangorestframework-simplejwt = "*"
+channels = {extras = ["daphne"], version = "*"}
+djoser = "*"
+pillow = "*"
 
 [dev-packages]
 
