--- a/dbackend/Pipfile
+++ b/dbackend/Pipfile
@@ -10,6 +10,7 @@ djangorestframework-simplejwt = "*"
 channels = {extras = ["daphne"], version = "*"}
 djoser = "*"
 pillow = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
